k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP
  selector:
    app: lunch-menu-postgres
  ports:
    - port: 5432
      targetPort: 5432
