k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lunch-menu-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: lunch-menu-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lunch-menu-api
                port:
                  number: 8000
